fix: restore scrollbar styling in index.css

--- a/RecipeMakerProject/src/index.css
+++ b/RecipeMakerProject/src/index.css
@@ -1,3 +1,6 @@
 @import "tailwindcss";
 /* #FF742C */
 /* #F4F4F8  - white */
+body::-webkit-scrollbar{
+    display: none;
+}
